[gd_scene load_steps=11 format=2]

[ext_resource path="res://HeavenAssets/PNG/bg_snow_layers/bg9_f.png" type="Texture" id=1]
[ext_resource path="res://LevelButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Levels.png" type="Texture" id=3]
[ext_resource path="res://assets/Home.png" type="Texture" id=4]
[ext_resource path="res://LevelScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/click.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/Ove-Melaa-Whoozer.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/NextHover.png" type="Texture" id=8]
[ext_resource path="res://assets/Next.png" type="Texture" id=9]
[ext_resource path="res://SoulsCollected.tscn" type="PackedScene" id=10]

[node name="LevelScreen" type="Node"]
script = ExtResource( 5 )
index = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 160, 92 )
scale = Vector2( 0.25, 0.255556 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 35.0
margin_top = 10.0
margin_right = 1275.0
margin_bottom = 248.0
rect_scale = Vector2( 0.2, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1240.0
margin_bottom = 238.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 238.0
texture = ExtResource( 3 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = -25.0
margin_top = 155.0
margin_right = 1215.0
margin_bottom = 393.0
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_right = 1240.0
margin_bottom = 238.0

[node name="TextureRect" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 4 )

[node name="LevelButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 56, 88 )
level = 1
level_to_load = "res://Objective.tscn"

[node name="LevelButton2" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 88 )
level = 2
level_to_load = "res://HeavenTwo.tscn"

[node name="LevelButton3" parent="." instance=ExtResource( 2 )]
position = Vector2( 264, 88 )
level = 3
level_to_load = "res://HeavenThree.tscn"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_left = 225.0
margin_top = 155.0
margin_right = 1465.0
margin_bottom = 392.0
rect_scale = Vector2( 0.1, 0.1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
margin_right = 1240.0
margin_bottom = 237.0

[node name="TextureButton" type="TextureButton" parent="MarginContainer3/VBoxContainer"]
margin_right = 1240.0
margin_bottom = 237.0
texture_normal = ExtResource( 9 )
texture_focused = ExtResource( 8 )

[node name="SoulsCollected" parent="." instance=ExtResource( 10 )]
position = Vector2( 112, 144 )
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureRect" to="." method="_on_TextureRect_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
